feat: cut professor app over to uat microservices
